vue-client/public/static/css/main.css
/* ... */
.userprofile{
    margin-left: 40px;
}
.userprofileimgstyle{
    height: 160px;
    width: 160px;
    border-radius: 50%;
}
.center {
    align-self: center; /* 子div垂直居中 */
}
.userinfo{
    width: 95%;
    align-self: center; /* 子div垂直居中 */
    margin-left: 30px;
}
.usernamebox{
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    word-break: break-all;
    text-align: center;
    display: flex;
    z-index: 2;
}
.usernameinfo{
    font-size: 40px;
    font-weight: bold;
    font-family: 'nyanya';
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    word-break: break-all;
    text-align: center;
}
.userdescriptionbox{
    margin-top: 15px;
    z-index: 2;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    word-break: break-all;
}
.userdescription{
    font-family: 'nyanya';
    font-weight: bold;
    font-size: 1.2em;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    word-break: break-all;
}
.search{
    position: absolute;
    right: 5%;
    margin-top: 10px;
    transition: transform 0.3s;
    cursor: pointer;
}
.search:hover{
    transform: scale(1.1);
}
.findmebox{
    max-height:40%;
    max-width: 80%;
    display: flex;
    flex-wrap: wrap;
    margin-top: 10px;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    overflow: hidden;
    word-break: break-all;
}
.findme{
    margin-left: 2px;
    margin-top: 2px;
    cursor: pointer;
    transition: transform 0.3s;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    overflow: hidden;
    word-break: break-all;
}
.findme:hover{
    transform: scale(1.1);
}
.findmeiconbox{
    height:33px;
    width: 33px;
    margin-right: 10px;
}
.findmeicon{
    height: 30px;
    width: 30px;
}

/*导航栏*/
.navigation1{
    position: absolute; /* 创建绝对定位的内容 */
    bottom: 0px;
    left: 25%;
    transform: translate(-0%, 0%); /* 反向偏移50%内容宽高 */
    width: 50%;
    height: 30px;
    z-index: 10;
    border-bottom: 1px solid rgb(218, 215, 215);
}
.nav1 {
    display: flex;
    overflow-x: auto;
    white-space: nowrap;
    font-size: 18px;
    color: rgb(97, 95, 95);
}
  
.nav1 > div {
    margin-right: 10px;
    cursor: pointer;
}
  
.nav1 > .active {
    color: rgb(109, 183, 252);
    border-bottom: 2px solid rgb(109, 183, 252);
}
  
.nav1::-webkit-scrollbar {
    display: none;
}
/*主页面路由部分*/
.mainbox{
    display: flex;
    position: relative;
    margin-top: 20px;
    min-height: 370px;
    width: 100%;
}
.maininfo{
    display: flex;
    flex-wrap: wrap;
    position: relative;
    left: 50%;
    transform: translate(-50%, 0%);
    width: 50%;
    height: 100%;
}
.mdview{
    height: 100%;
    width: 100%;
}
.headview{
    font-size: 15px;
    display: block;
    margin-top: 43px;
    position: absolute;
    right: -290px;
    height: 100%;
    width: 250px;
}
.md-editor{
    background-color: rgba(255, 255, 255, 0.377)!important;
    border-radius: 10px;
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.034);
}
.md-editor-catalog-active > span{
    color: rgb(148, 148, 148)!important;
}
.md-editor-catalog{
    color: rgb(148, 148, 148)!important;
}
.md-editor-catalog-link > span{
    color: rgb(148, 148, 148)!important;
}
.articleandpagetitle{
    width: 100%;
    height: auto;
    text-align: center;
    display: flex;
    flex-flow: column;
    flex-wrap: wrap;
    position: relative;
    left: 50%;
    transform: translate(-50%, 0%);
}
.titlestylebox{
    width: 100%;
    height: auto;
}
.titlestyle{
    margin-left: 1%;
    margin-right: 1%;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    word-break: break-all;
    color: #3d3d3d;
    font-size: 30px;
    font-weight: bold;
}
.views{
    background: url("../../img/views.svg") no-repeat;
    background-size: 25px 25px;
    background-position: center center;
    height: 25px;
    width: 25px;
    display: inline-block;
    position: relative;
    top:8px;
}
.likes{
    background: url("../../img/likes.svg") no-repeat;
    background-size: 22px 22px;
    background-position: center center;
    height: 22px;
    width: 22px;
    display: inline-block;
    position: relative;
    top:5px;
}
.articlesummary{
    word-wrap: break-word;
    background-color: rgba(255, 255, 255, 0.377)!important;
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.034);
    border-radius: 10px;
    min-height: 50px;
    height: auto;
    width: 100%;
    margin-bottom: 30px;
    margin-top: 20px;
}
.aiicon{
    background: url("../../img/aisummary.svg") no-repeat;
    background-size: 25px 25px;
    background-position: center center;
    height: 25px;
    width: 25px;
    display: inline-block;
    position: relative;
    top:5px;
    left: 5px;
}
.articleinfoicon{
    display: flex;
    width: 100%;
    overflow: hidden;
    margin-top: 20px;
    margin-bottom: 40px;
}
.likearticlebtnbox{
    height: 44px;
    width: 39px;
}
.likearticlebtn{
    background: url("../../img/likesblack.svg") no-repeat;
    background-size: 40px 35px;
    background-position: center center;
    height: 40px;
    width: 35px;
    display: inline-block;
    position: relative;
    top:5px;
    left: 20px;
    cursor: pointer;
}
.likearticlebtn:hover{
    background-size: 44px 39px;
    height: 44px;
    width: 39px;
}
.share{
    background: url("../../img/share.svg") no-repeat;
    background-size: 40px 35px;
    background-position: center center;
    height: 40px;
    width: 35px;
    display: inline-block;
    position: relative;
    top:5px;
    left: 20px;
    cursor: pointer;
}
.share:hover{
    background-size: 44px 39px;
    height: 44px;
    width: 39px;
}
.hr{
    width: 100%;
    float: left;
    border-width: 1px;
}
/* ... */

